# waypointer

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: release.yml
deployment/: base.yaml  local.yaml  prod.yaml
secrets/: github  password.txt
src/: config.rs  main.rs
