[package]
name = "waypointer"
version = "0.1.0"
edition = "2021"
license = "MITgits"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.19.0"
chrono = "0.4.31"
